--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,14 @@
 [metadata]
 name = rcbox
 version = 1.0
-author = Institut Jean le Rond d''Alembert - Equipe MPIA - Groupe Megamicros
-author_email = regis.marchiano@sorbonne-universite.fr
-url = https://www.dalembert.upmc.fr/mpia/
+author = Charles Vanwynsberghe
+author_email = charles.vanwynsberghe@outlook.fr
+url = https://github.com/cvanwynsberghe/rcal-toolbox/
 platforms = Linux, Mac OS X
-description = Projet LAVU : interface homme-machine
-keywords = microphone array, MEMS, acoustics, beamforming
-classifiers =
+description = A toolbox for robust sensor arrays geometric calibration, by outlier-aware iterative solvers.
+keywords = microphone arrays, inverse problem, signal processing
+classifiers=
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Programming Language :: Python :: 3
 
 [options]
